testsuite/tests/parser/should_fail/T19928.stderr

T19928.hs:6:9: error:
    Parse error: ‘(%1 ->)’
    Record constructors in GADTs must use an ordinary, non-linear arrow.

T19928.hs:7:9: error:
    Parse error: ‘(%p ->)’
    Record constructors in GADTs must use an ordinary, non-linear arrow.

T19928.hs:8:9: error:
    Parse error: ‘(%1 ->)’
    Record constructors in GADTs must use an ordinary, non-linear arrow.
